--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -2,8 +2,6 @@
 
 # Introduction
 
-## SHIFT RETURN SOMEWHERE
-
 Welcome! In this guide, we will teach you about statistics using the statistical software R with the interface provided by R Studio.  The purpose of this chapter to is provide you with a set of activities that get you up-and-running in R quickly so get a sense of how it works. In later chatpers we will revisit these same topics in more detail. 
 
 ## A focus on workflow
@@ -334,7 +332,7 @@ You should see the output below:
 Congratulations you just ran your first script!
 
 
-## A Few Key Points About R
+## A few key points about
 
 Sometimes you will need to send a command additional information. Moreover, that information often needs to be grouped together into a vector or a list before you can send it to the command. We'll learn more about doing so in the future but here is a quick over view of vectors and lists to provide a foundation for future chapters.
 
