--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-06-27}
+\date{2020-06-28}
 
 \begin{document}
 \maketitle
@@ -263,79 +263,78 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   abind_1.4.5           acepack_1.4.1        
-##   apaTables_2.0.5       askpass_1.1          
-##   assertthat_0.2.1      backports_1.1.7      
-##   base64enc_0.1-3       BH_1.72.0.3          
-##   bookdown_0.19.1       boot_1.3.25          
-##   broom_0.7.0.9000      callr_3.4.3          
-##   car_3.0.8             carData_3.0.4        
-##   cellranger_1.1.0      checkmate_2.0.0      
-##   cli_2.0.2             clipr_0.7.0          
-##   cluster_2.1.0         colorspace_1.4-1     
-##   compiler_4.0.1        crayon_1.3.4         
-##   curl_4.3              data.table_1.12.8    
-##   DBI_1.1.0             dbplyr_1.4.3         
-##   desc_1.2.0            digest_0.6.25        
-##   dplyr_1.0.0           ellipsis_0.3.1       
-##   evaluate_0.14         fansi_0.4.1          
-##   farver_2.0.3          forcats_0.5.0        
-##   foreign_0.8-80        Formula_1.2-3        
-##   fs_1.4.1              generics_0.0.2       
-##   ggplot2_3.3.1         glue_1.4.1           
-##   GPArotation_2014.11-1 graphics_4.0.1       
-##   grDevices_4.0.1       grid_4.0.1           
-##   gridExtra_2.3         gtable_0.3.0         
-##   haven_2.3.1           highr_0.8            
-##   Hmisc_4.4-0           hms_0.5.3            
-##   htmlTable_2.0.0       htmltools_0.4.0      
-##   htmlwidgets_1.5.1     httr_1.4.1           
-##   isoband_0.2.1         janitor_2.0.1        
-##   jpeg_0.1-8.1          jsonlite_1.6.1       
-##   knitr_1.28            labeling_0.3         
-##   lattice_0.20-41       latticeExtra_0.6-29  
-##   lifecycle_0.2.0       lme4_1.1.23          
-##   lubridate_1.7.8       magrittr_1.5         
-##   maptools_1.0.1        markdown_1.1         
-##   MASS_7.3.51.6         Matrix_1.2-18        
-##   MatrixModels_0.4.1    methods_4.0.1        
-##   mgcv_1.8.31           mime_0.9             
-##   minqa_1.2.4           mnormt_1.5-7         
-##   modelr_0.1.8          munsell_0.5.0        
-##   nlme_3.1-148          nloptr_1.2.2.1       
-##   nnet_7.3-14           openssl_1.4.1        
-##   openxlsx_4.1.5        packrat_0.5.0        
-##   parallel_4.0.1        pbkrtest_0.4.8.6     
-##   pillar_1.4.4          pkgbuild_1.0.8       
-##   pkgconfig_2.0.3       pkgload_1.1.0        
-##   png_0.1-7             praise_1.0.0         
-##   prettyunits_1.1.1     processx_3.4.2       
-##   progress_1.2.2        ps_1.3.3             
-##   psych_1.9.12.31       purrr_0.3.4          
-##   quantreg_5.55         R6_2.4.1             
-##   RColorBrewer_1.1-2    Rcpp_1.0.4.6         
-##   RcppEigen_0.3.3.7.0   readr_1.3.1          
-##   readxl_1.3.1          rematch_1.0.1        
-##   reprex_0.3.0          rio_0.5.16           
-##   rlang_0.4.6           rmarkdown_2.2        
-##   rpart_4.1-15          rprojroot_1.3.2      
-##   rsconnect_0.8.16      rstudioapi_0.11      
-##   rvest_0.3.5           scales_1.1.1         
-##   selectr_0.4.2         snakecase_0.11.0     
-##   sp_1.4.2              SparseM_1.78         
-##   splines_4.0.1         statmod_1.4.34       
-##   stats_4.0.1           stringi_1.4.6        
-##   stringr_1.4.0         survival_3.1-12      
-##   sys_3.3               testthat_2.3.2       
-##   tibble_3.0.1          tidyr_1.1.0          
-##   tidyselect_1.1.0      tidyverse_1.3.0      
-##   tinytex_0.23          tools_4.0.1          
-##   utf8_1.1.4            utils_4.0.1          
-##   vctrs_0.3.0           viridis_0.5.1        
-##   viridisLite_0.3.0     whisker_0.4          
-##   withr_2.2.0           xfun_0.14            
-##   xml2_1.3.2            yaml_2.2.1           
-##   zip_2.0.4
+##   abind_1.4.5         acepack_1.4.1      
+##   apaTables_2.0.5     askpass_1.1        
+##   assertthat_0.2.1    backports_1.1.7    
+##   base64enc_0.1-3     BH_1.72.0.3        
+##   bookdown_0.19.1     boot_1.3.25        
+##   broom_0.7.0.9000    callr_3.4.3        
+##   car_3.0.8           carData_3.0.4      
+##   cellranger_1.1.0    checkmate_2.0.0    
+##   cli_2.0.2           clipr_0.7.0        
+##   cluster_2.1.0       colorspace_1.4-1   
+##   compiler_4.0.1      crayon_1.3.4       
+##   curl_4.3            data.table_1.12.8  
+##   DBI_1.1.0           dbplyr_1.4.3       
+##   desc_1.2.0          digest_0.6.25      
+##   dplyr_1.0.0         ellipsis_0.3.1     
+##   evaluate_0.14       fansi_0.4.1        
+##   farver_2.0.3        forcats_0.5.0      
+##   foreign_0.8-80      Formula_1.2-3      
+##   fs_1.4.1            generics_0.0.2     
+##   ggplot2_3.3.1       glue_1.4.1         
+##   graphics_4.0.1      grDevices_4.0.1    
+##   grid_4.0.1          gridExtra_2.3      
+##   gtable_0.3.0        haven_2.3.1        
+##   highr_0.8           Hmisc_4.4-0        
+##   hms_0.5.3           htmlTable_2.0.0    
+##   htmltools_0.4.0     htmlwidgets_1.5.1  
+##   httr_1.4.1          isoband_0.2.1      
+##   janitor_2.0.1       jpeg_0.1-8.1       
+##   jsonlite_1.6.1      knitr_1.28         
+##   labeling_0.3        lattice_0.20-41    
+##   latticeExtra_0.6-29 lifecycle_0.2.0    
+##   lme4_1.1.23         lubridate_1.7.8    
+##   magrittr_1.5        maptools_1.0.1     
+##   markdown_1.1        MASS_7.3.51.6      
+##   Matrix_1.2-18       MatrixModels_0.4.1 
+##   methods_4.0.1       mgcv_1.8.31        
+##   mime_0.9            minqa_1.2.4        
+##   mnormt_1.5-7        modelr_0.1.8       
+##   munsell_0.5.0       nlme_3.1-148       
+##   nloptr_1.2.2.1      nnet_7.3-14        
+##   openssl_1.4.1       openxlsx_4.1.5     
+##   packrat_0.5.0       parallel_4.0.1     
+##   pbkrtest_0.4.8.6    pillar_1.4.4       
+##   pkgbuild_1.0.8      pkgconfig_2.0.3    
+##   pkgload_1.1.0       png_0.1-7          
+##   praise_1.0.0        prettyunits_1.1.1  
+##   processx_3.4.2      progress_1.2.2     
+##   ps_1.3.3            psych_1.9.12.31    
+##   purrr_0.3.4         quantreg_5.55      
+##   R6_2.4.1            RColorBrewer_1.1-2 
+##   Rcpp_1.0.4.6        RcppEigen_0.3.3.7.0
+##   readr_1.3.1         readxl_1.3.1       
+##   rematch_1.0.1       reprex_0.3.0       
+##   rio_0.5.16          rlang_0.4.6        
+##   rmarkdown_2.2       rpart_4.1-15       
+##   rprojroot_1.3.2     rsconnect_0.8.16   
+##   rstudioapi_0.11     rvest_0.3.5        
+##   scales_1.1.1        selectr_0.4.2      
+##   snakecase_0.11.0    sp_1.4.2           
+##   SparseM_1.78        splines_4.0.1      
+##   statmod_1.4.34      stats_4.0.1        
+##   stringi_1.4.6       stringr_1.4.0      
+##   survival_3.1-12     sys_3.3            
+##   testthat_2.3.2      tibble_3.0.1       
+##   tidyr_1.1.0         tidyselect_1.1.0   
+##   tidyverse_1.3.0     tinytex_0.23       
+##   tools_4.0.1         utf8_1.1.4         
+##   utils_4.0.1         vctrs_0.3.0        
+##   viridis_0.5.1       viridisLite_0.3.0  
+##   whisker_0.4         withr_2.2.0        
+##   xfun_0.14           xml2_1.3.2         
+##   yaml_2.2.1          zip_2.0.4
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -350,9 +349,6 @@ David J. Stanley is an Associate Professor of Industrial and Organizational Psyc
 
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
-
-\hypertarget{shift-return-somewhere}{%
-\section{SHIFT RETURN SOMEWHERE}\label{shift-return-somewhere}}
 
 Welcome! In this guide, we will teach you about statistics using the statistical software R with the interface provided by R Studio. The purpose of this chapter to is provide you with a set of activities that get you up-and-running in R quickly so get a sense of how it works. In later chatpers we will revisit these same topics in more detail.
 
@@ -962,8 +958,8 @@ You should see the output below:
 
 Congratulations you just ran your first script!
 
-\hypertarget{a-few-key-points-about-r}{%
-\section{A Few Key Points About R}\label{a-few-key-points-about-r}}
+\hypertarget{a-few-key-points-about}{%
+\section{A few key points about}\label{a-few-key-points-about}}
 
 Sometimes you will need to send a command additional information. Moreover, that information often needs to be grouped together into a vector or a list before you can send it to the command. We'll learn more about doing so in the future but here is a quick over view of vectors and lists to provide a foundation for future chapters.
 
@@ -1142,7 +1138,7 @@ The objective of this chapter is to familiarize you with some key commands in th
 All of the commands in this chapter should be typed into the Console within R. If you see a command split over multiple lines, use SHIFT-RETURN or SHIFT-ENTER to move the next line that is part of the same command.
 
 \hypertarget{basic-tidyverse-commands}{%
-\section{Basic Tidyverse Commands}\label{basic-tidyverse-commands}}
+\section{Basic tidyverse commands}\label{basic-tidyverse-commands}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1494,7 +1490,7 @@ Notice that the glimpse() command reveals that after we use the mutate() command
 \end{verbatim}
 
 \hypertarget{advanced-tidyverse-commands}{%
-\section{Advanced Tidyverse Commands}\label{advanced-tidyverse-commands}}
+\section{Advanced tidyverse commands}\label{advanced-tidyverse-commands}}
 
 In this advanced selection we will revisit the commands from the basic tidyverse section but use more complicated code to either select or apply an action to more than one column at a time. We will indicate the columns that we want to select or apply an action to using: starts\_with(), ends\_with(), contains(), matches(), or where(). The first four of these are used to indicate columns based on column names. In contrast, the last command, where(), i sued to indicate the columns we want base on the column type (numeric, character, factor, etc.). You can learn more about each of these commands by simply typing into the console a question mark followed by the function name (e.g., ?where) and then pressing return/enter. This will provide the help page for that function in Help tab in the lower right of R Studio. Note that you must have first activiated the tidyverse via library command for the help file to be accessible.
 
@@ -1956,18 +1952,22 @@ We can make it even easier to see by combining tidyverse commands and using only
 ## 6        1        2       1.5
 \end{verbatim}
 
-\hypertarget{using-r-the-old-way-or-the-new-way-the-tidyverse-way}{%
-\section{Using R the old way or the new way (the tidyverse way)}\label{using-r-the-old-way-or-the-new-way-the-tidyverse-way}}
+\hypertarget{base-r-vs-tidyverse}{%
+\section{Base R vs tidyverse}\label{base-r-vs-tidyverse}}
 
-Previously we noted that there is an older way of using R (base R) and the new way of using R (the tidyverse) that we will use. Sometimes students have problems with their code when they mix and match these approaches using a bit of both. We will be using the tidyverse approach to using R but on the internet you will often see sample code that uses the older base R approach. A bit of background knowledge is helpful for understanding why we do things one way (e.g., read\_csv with the tidyverse) instead of another (e.g., read.csv with base R).
+All of the commands used to this point in the chapter have been the tidyverse appraoch to using. That is the approach we will normally use. However, it's important to note that there is another way of using R, called base R.
 
-\hypertarget{tibbles-vs-data-frames-why-use-read_csv-instead-of-read.csv}{%
-\subsection{Tibbles vs Data Frames: Why use read\_csv instead of read.csv}\label{tibbles-vs-data-frames-why-use-read_csv-instead-of-read.csv}}
+Sometimes students have problems with their code when they mix and match these approaches using a bit of both. We will be using the tidyverse approach to using R but on the internet you will often see sample code that uses the older base R approach. A bit of background knowledge is helpful for understanding why we do things one way (e.g., read\_csv with the tidyverse) instead of another (e.g., read.csv with base R).
 
-When you load data into R it is typically represented in one of two formats inside the computer - depending on the command you used. The original format for representing a data set in R is the data frame. You will see this term used frequently when you read about R. When you load data using read.csv your data is loaded into a data frame in the computer. That is your data is represented in the memory of the computer in particular format and structure called a data frame.
+\hypertarget{tibbles-vs.-data-frames}{%
+\subsection{Tibbles vs.~data frames}\label{tibbles-vs.-data-frames}}
 
-\hypertarget{read.csv-puts-data-into-a-data-frame}{%
-\subsection{read.csv puts data into a data frame}\label{read.csv-puts-data-into-a-data-frame}}
+When you load data into R it is typically represented in one of two formats inside the computer - depending on the command you used. The original format for representing a data set in R is the data frame. You will see this term used frequently when you read about R. When you load data using read.csv your data is loaded into a data frame in the computer. That is your data is represented in the memory of the computer in particular format and structure called a data frame. This contrasts with the newer tidyverse approach to representing data in the computer called a tibble - which is just an newer more advanced version of the data frame.
+
+\hypertarget{read.csv-and-data-frames}{%
+\subsection{read.csv and data frames}\label{read.csv-and-data-frames}}
+
+When you read data into R using the command read.csv (with a period) you load the data into a data frame (base R).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1975,7 +1975,7 @@ When you load data into R it is typically represented in one of two formats insi
 \end{Highlighting}
 \end{Shaded}
 
-Notice that when you print a data frame it does NOT show you the number of rows or columns above the data like our example did with the okcupid\_profiles data. It also list ALL of your data rather than just the first few rows. As a result in the output below I show only the first 10 rows of the output - because all the rows are printed in your Console (too much to show here).
+Notice that when you print a data frame it does not show you the number of rows or columns above the data like our example did with the okcupid\_profiles data. Likewise, it does not show you the type of data in each column (e..g, dbl, fct, chr. But, it also list all of your data rather than just the first few rows (as the tibble does). As a result in the output below I show only the first 10 rows of the output - because all the rows are printed in your Console with a data frame (too much to show here).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -2008,10 +2008,10 @@ Notice that when you print a data frame it does NOT show you the number of rows 
 ## 10   m    single
 \end{verbatim}
 
-\hypertarget{read_csv-puts-data-into-a-tibble}{%
-\subsection{read\_csv puts data into a tibble}\label{read_csv-puts-data-into-a-tibble}}
+\hypertarget{read_csv-and-tibbles}{%
+\subsection{read\_csv and tibbles}\label{read_csv-and-tibbles}}
 
-When you use the read\_csv command the data you load is stored in the computer as a tibble. The tibble is modern version of the data frame. Notice that when you print a tibble it DOES show you the number of rows and columns. As well, the tibble only provides the first few rows of output so it doesn't fill your screen.
+When you read data into R using the command read\_csv (with an underscore) you load the data into a tibble (tidyverse).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -2030,6 +2030,8 @@ When you use the read\_csv command the data you load is stored in the computer a
 ##   status = col_character()
 ## )
 \end{verbatim}
+
+The tibble is modern version of the data frame. Notice that when you print a tibble it DOES show you the number of rows and columns. As well, it shows you the type of data in each column. Importantly, the tibble only provides the first few rows of output so it doesn't fill your screen.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -2054,18 +2056,11 @@ When you use the read\_csv command the data you load is stored in the computer a
 ## # ... with 59,936 more rows
 \end{verbatim}
 
-\hypertarget{deeper-differences-between-data-frames-and-tibbles}{%
-\subsection{Deeper differences between data frames and tibbles}\label{deeper-differences-between-data-frames-and-tibbles}}
-
-In short you should always use tibbles (i.e., use read\_csv) - they are simply enhanced data frames (i.e., the new version of the data frame). The differences between data frames and tibbles run deeper than the superficial output provided here. On some rare occasions an old package or command may not work with a tibble so you need to make it a data frame. You can do so with the commands below:
-
-\hypertarget{converting-a-tibble-into-a-data-frame}{%
-\subsection{Converting a tibble into a data frame}\label{converting-a-tibble-into-a-data-frame}}
-
-This command creates a new data set called new\_data\_frame (use any name you want) from the tibble data.
+In short you should always use tibbles (i.e., use read\_csv not read.csv). The differences between data frames and tibbles run deeper than the superficial output provided here. On some rare occasions an old package or command may not work with a tibble so you need to make it a data frame. You can do so with the commands below. We will flag these rare occurances to you in the next.
 
 \begin{Shaded}
 \begin{Highlighting}[]
+\CommentTok{# Create a data frame from a tibble}
 \NormalTok{new_dataframe <-}\StringTok{ }\KeywordTok{as.data.frame}\NormalTok{(my_tibble)}
 \end{Highlighting}
 \end{Shaded}
@@ -2318,8 +2313,10 @@ A Likert-type item is typically composed of a statement that participants are as
 \item
   \textbf{Indicate in the item name the range for reverse key items. } If an item is reverse-keyed, the process for the flipping the scores depends upon the range of a scale. Although 5-point scale are common, any number of points are possible. The process for correcting a reverse key item depends upon: 1) the number of points on the scale, and 2) the range of the points on the scale. The reverse-key item correction process is different for an item that uses a 5-point scale ranging from 1 to 5 and from 0 to 4. Both are 5-point scale but your correction process will be different. Therefore, for reverse key items add as suffix at the end of each item name that indicates an item is reverse keyed and the range of the item. For example, if the third job satisfaction item was reversed keyed on scale using a 1 to 5 response format you might name the item: jobsat3\_rev15. The suffix "\_rev15" indicates the item is reverse keyed and the range of responses used on the item is 1 to 5. Be sure to set up your survey with this naming convention when you collect your data.
 \item
-  If you collect items over multiple time points prefix the time and the xxx show both a time prefix and reverse suffix.
+  If you collect items over multiple time points use a prefix with the
 \end{itemize}
+
+prefix the time and the xxx show both a time prefix and reverse suffix.
 
 \hypertarget{anova-between-participant-levels}{%
 \subsection{ANOVA between-participant levels}\label{anova-between-participant-levels}}
@@ -2728,45 +2725,7 @@ The command above creates a new column in analytic\_data called SE7c that has th
 
 \begin{Shaded}
 \begin{Highlighting}[]
-\NormalTok{analytic_data <-}\StringTok{ }\NormalTok{analytic_data }\OperatorTok{%>%}\StringTok{ }
-\StringTok{  }\KeywordTok{rowwise}\NormalTok{() }\OperatorTok{%>%}\StringTok{ }
-\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{self_esteem =} \KeywordTok{mean}\NormalTok{( }\KeywordTok{c_across}\NormalTok{(}\DataTypeTok{cols =} \KeywordTok{starts_with}\NormalTok{(}\StringTok{"esteem"}\NormalTok{)),}
-                               \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{ungroup}\NormalTok{() }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"esteem"}\NormalTok{))}
-\end{Highlighting}
-\end{Shaded}
-
-When you see ungroup() in this context you can think of it as ``turn off rowwise''.
-
-We can see our data now has the self esteem column and no esteem items.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{glimpse}\NormalTok{(analytic_data)}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-## Rows: 300
-## Columns: 10
-## $ id          <fct> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, ...
-## $ age         <dbl> 23, 22, 18, 23, 22, 17, 23, 22, 17,...
-## $ sex         <fct> male, female, male, female, male, f...
-## $ eye_color   <fct> blue, brown, hazel, blue, NA, hazel...
-## $ jobsat1     <dbl> 3, 5, 4, 3, 3, 3, 3, 5, 3, 3, 3, 4,...
-## $ jobsat2     <dbl> 5, 5, 5, NA, 5, 5, 4, 5, 4, 4, 3, 5...
-## $ jobsat3     <dbl> 3, NA, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3...
-## $ jobsat4     <dbl> NA, 5, 5, 4, 4, 4, 4, 5, NA, 4, NA,...
-## $ jobsat5     <dbl> 5, NA, 5, 4, 5, 4, 4, 5, 5, 5, 4, N...
-## $ self_esteem <dbl> 3.200, 3.800, 3.800, 3.000, 3.400, ...
-\end{verbatim}
-
-\hypertarget{confirm-select-will-select-the-columns-you-want-and-not-others}{%
-\section{confirm select will select the columns you want (and not others)}\label{confirm-select-will-select-the-columns-you-want-and-not-others}}
-
-\begin{Shaded}
-\begin{Highlighting}[]
+\CommentTok{# confirm select will select the columns you want (and not others)}
 \NormalTok{analytic_data }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{select}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"jobsat"}\NormalTok{)) }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{glimpse}\NormalTok{()}
@@ -2787,12 +2746,19 @@ We can see our data now has the self esteem column and no esteem items.
 \begin{Highlighting}[]
 \NormalTok{analytic_data <-}\StringTok{ }\NormalTok{analytic_data }\OperatorTok{%>%}\StringTok{ }
 \StringTok{  }\KeywordTok{rowwise}\NormalTok{() }\OperatorTok{%>%}\StringTok{ }
-\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{job_sat =} \KeywordTok{mean}\NormalTok{( }\KeywordTok{c_across}\NormalTok{(}\DataTypeTok{cols =} \KeywordTok{starts_with}\NormalTok{(}\StringTok{"jobsat"}\NormalTok{)),}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{self_esteem =} \KeywordTok{mean}\NormalTok{(}\KeywordTok{c_across}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"esteem"}\NormalTok{)),}
+                               \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{job_sat =} \KeywordTok{mean}\NormalTok{(}\KeywordTok{c_across}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"jobsat"}\NormalTok{)),}
                                \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
 \StringTok{  }\KeywordTok{ungroup}\NormalTok{() }\OperatorTok{%>%}
-\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"jobsat"}\NormalTok{))}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"esteem"}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"jobsat"}\NormalTok{)) }
 \end{Highlighting}
 \end{Shaded}
+
+When you see ungroup() in this context you can think of it as ``turn off rowwise''.
+
+We can see our data now has the self esteem column and no esteem items.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -2950,6 +2916,205 @@ If you want Cronbach's alpha to estimate the reliability of the scale, you can u
 ##     0.6622    0.6634  0.6173    0.2827 1.97 0.03035 3.403
 ##      sd median_r
 ##  0.3239   0.2927
+\end{verbatim}
+
+\hypertarget{walk-though-surveys-with-multiple-occasions}{%
+\section{Walk though: Surveys with multiple occasions}\label{walk-though-surveys-with-multiple-occasions}}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(tidyverse)}
+
+\NormalTok{raw_data_survey <-}\StringTok{ }\KeywordTok{read_csv}\NormalTok{(}\StringTok{"data_item_time.csv"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Parsed with column specification:
+## cols(
+##   .default = col_double(),
+##   sex = col_character(),
+##   eye_color = col_character()
+## )
+\end{verbatim}
+
+\begin{verbatim}
+## See spec(...) for full column specifications.
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{raw_data_survey}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{glimpse}\NormalTok{(analytic_data_survey)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Rows: 300
+## Columns: 24
+## $ id               <dbl> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10,...
+## $ age              <dbl> 23, 22, 18, 23, 22, 17, 23, 22...
+## $ sex              <chr> "male", "female", "male", "fem...
+## $ eye_color        <chr> "blue", "brown", "hazel", "blu...
+## $ t1_esteem1       <dbl> 3, 4, 4, 3, 3, 3, 3, 4, 4, 4, ...
+## $ t1_esteem2       <dbl> 2, 3, 3, 2, 2, 3, 2, 3, 3, 3, ...
+## $ t1_esteem3       <dbl> 4, 4, 4, 3, 4, 4, NA, 4, 4, 3,...
+## $ t1_esteem4       <dbl> 3, 4, 4, 3, 4, 4, 4, 4, 3, 4, ...
+## $ t1_esteem5_rev15 <dbl> 2, 2, 2, 2, 2, NA, NA, 2, 2, 2...
+## $ t1_jobsat1       <dbl> 3, 5, 4, 3, 3, 3, 3, 5, 3, 3, ...
+## $ t1_jobsat2_rev15 <dbl> 1, 1, 1, NA, 1, 1, 2, 1, 2, 2,...
+## $ t1_jobsat3       <dbl> 3, NA, 3, 3, 3, 3, 3, 3, 3, 3,...
+## $ t1_jobsat4       <dbl> NA, 5, 5, 4, 4, 4, 4, 5, NA, 4...
+## $ t1_jobsat5       <dbl> 5, NA, 5, 4, 5, 4, 4, 5, 5, 5,...
+## $ t2_esteem1       <dbl> 4, 5, 5, 4, NA, 4, 4, 5, 5, 5,...
+## $ t2_esteem2       <dbl> 3, 4, 4, 3, 3, 4, 3, 4, 4, 4, ...
+## $ t2_esteem3       <dbl> 5, 5, 5, 4, 5, 5, 3, 5, 5, 4, ...
+## $ t2_esteem4       <dbl> 4, 5, 5, 4, 5, 5, 5, 5, 4, 5, ...
+## $ t2_esteem5_rev15 <dbl> 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, ...
+## $ t2_jobsat1       <dbl> 4, 6, 5, 4, 4, 4, 4, 6, 4, NA,...
+## $ t2_jobsat2_rev15 <dbl> 2, 2, 2, 3, 2, 2, 3, 2, 3, 3, ...
+## $ t2_jobsat3       <dbl> 4, 3, 4, 4, 4, 4, 4, 4, 4, 4, ...
+## $ t2_jobsat4       <dbl> 3, 6, 6, 5, 5, 5, 5, 6, 3, 5, ...
+## $ t2_jobsat5       <dbl> 6, 3, 6, 5, NA, 5, 5, 6, 6, 6,...
+\end{verbatim}
+
+Handle categorical variables:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{analytic_data_survey <-analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{id =} \KeywordTok{as.factor}\NormalTok{(id))}
+
+\CommentTok{# Turn all columns that are of type character into factors}
+\NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{where}\NormalTok{(is.character),}
+                \DataTypeTok{.fns =}\NormalTok{ as_factor))}
+
+
+\CommentTok{# Custom reordering of factor levels for sex}
+\NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{sex =} \KeywordTok{fct_relevel}\NormalTok{(sex,}
+                           \StringTok{"intersex"}\NormalTok{,}
+                           \StringTok{"female"}\NormalTok{,}
+                           \StringTok{"male"}\NormalTok{))}
+
+\CommentTok{#  Reordering factor levels by frequency for eye color}
+\NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{eye_color =} \KeywordTok{fct_infreq}\NormalTok{(eye_color))}
+\end{Highlighting}
+\end{Shaded}
+
+Create scale scores:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\CommentTok{# Reverse code items}
+\NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DecValTok{6} \OperatorTok{-}\StringTok{ }\KeywordTok{across}\NormalTok{(}\DataTypeTok{.cols =} \KeywordTok{ends_with}\NormalTok{(}\StringTok{"_rev15"}\NormalTok{)) ) }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{rename_with}\NormalTok{(}\DataTypeTok{.fn =}\NormalTok{ str_remove,}
+              \DataTypeTok{.cols =} \KeywordTok{ends_with}\NormalTok{(}\StringTok{"_rev15"}\NormalTok{),}
+              \DataTypeTok{pattern =} \StringTok{"_rev15"}\NormalTok{)}
+
+
+\NormalTok{analytic_data_survey <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{rowwise}\NormalTok{() }\OperatorTok{%>%}\StringTok{ }
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{esteem_t1 =} \KeywordTok{mean}\NormalTok{(}\KeywordTok{c_across}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1_esteem"}\NormalTok{)),}
+                               \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{esteem_t2 =} \KeywordTok{mean}\NormalTok{(}\KeywordTok{c_across}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t2_esteem"}\NormalTok{)),}
+                               \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{jobsat_t1 =} \KeywordTok{mean}\NormalTok{(}\KeywordTok{c_across}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1_jobsat"}\NormalTok{)),}
+                               \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{jobsat_t2 =} \KeywordTok{mean}\NormalTok{(}\KeywordTok{c_across}\NormalTok{(}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t2_jobsat"}\NormalTok{)),}
+                               \DataTypeTok{na.rm =} \OtherTok{TRUE}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{ungroup}\NormalTok{() }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1_esteem"}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t2_esteem"}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t1_jobsat"}\NormalTok{)) }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{select}\NormalTok{(}\OperatorTok{-}\KeywordTok{starts_with}\NormalTok{(}\StringTok{"t2_jobsat"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{glimpse}\NormalTok{(analytic_data_survey)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Rows: 300
+## Columns: 8
+## $ id        <fct> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12...
+## $ age       <dbl> 23, 22, 18, 23, 22, 17, 23, 22, 17, N...
+## $ sex       <fct> male, female, male, female, male, fem...
+## $ eye_color <fct> blue, brown, hazel, blue, NA, hazel, ...
+## $ esteem_t1 <dbl> 3.200, 3.800, 3.800, 3.000, 3.400, 3....
+## $ esteem_t2 <dbl> 3.8, 4.4, 4.4, 3.6, 4.0, 4.2, 3.6, 4....
+## $ jobsat_t1 <dbl> 4.00, 5.00, 4.40, 3.50, 4.00, 3.80, 3...
+## $ jobsat_t2 <dbl> 4.20, 4.40, 5.00, 4.20, 4.25, 4.40, 4...
+\end{verbatim}
+
+But now comes the complicated point wher eyou need to pivot the data to longer.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{print}\NormalTok{(analytic_data_survey)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## # A tibble: 300 x 8
+##    id      age sex   eye_color esteem_t1 esteem_t2 jobsat_t1
+##    <fct> <dbl> <fct> <fct>         <dbl>     <dbl>     <dbl>
+##  1 1        23 male  blue            3.2       3.8      4   
+##  2 2        22 fema~ brown           3.8       4.4      5   
+##  3 3        18 male  hazel           3.8       4.4      4.4 
+##  4 4        23 fema~ blue            3         3.6      3.5 
+##  5 5        22 male  <NA>            3.4       4        4   
+##  6 6        17 fema~ hazel           3.5       4.2      3.8 
+##  7 7        23 male  blue            3         3.6      3.6 
+##  8 8        22 fema~ brown           3.8       4.4      4.6 
+##  9 9        17 male  hazel           3.6       4.2      3.75
+## 10 10       NA fema~ blue            3.6       4.2      3.8 
+## # ... with 290 more rows, and 1 more variable:
+## #   jobsat_t2 <dbl>
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{analytic_survey_tidy <-}\StringTok{ }\NormalTok{analytic_data_survey }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{pivot_longer}\NormalTok{(esteem_t1}\OperatorTok{:}\NormalTok{jobsat_t2,}
+               \DataTypeTok{names_to =} \KeywordTok{c}\NormalTok{(}\StringTok{".value"}\NormalTok{, }\StringTok{"time"}\NormalTok{),}
+               \DataTypeTok{names_pattern =} \StringTok{"(.*)_(t.)"}
+\NormalTok{  )}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{print}\NormalTok{(analytic_survey_tidy)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## # A tibble: 600 x 7
+##    id      age sex    eye_color time  esteem jobsat
+##    <fct> <dbl> <fct>  <fct>     <chr>  <dbl>  <dbl>
+##  1 1        23 male   blue      t1       3.2   4   
+##  2 1        23 male   blue      t2       3.8   4.2 
+##  3 2        22 female brown     t1       3.8   5   
+##  4 2        22 female brown     t2       4.4   4.4 
+##  5 3        18 male   hazel     t1       3.8   4.4 
+##  6 3        18 male   hazel     t2       4.4   5   
+##  7 4        23 female blue      t1       3     3.5 
+##  8 4        23 female blue      t2       3.6   4.2 
+##  9 5        22 male   <NA>      t1       3.4   4   
+## 10 5        22 male   <NA>      t2       4     4.25
+## # ... with 590 more rows
 \end{verbatim}
 
 \cleardoublepage
