--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -192,13 +192,21 @@ education, income, etc
 
 ### Between-participant designs
 
+Runnning
 
 ### Within-participant designs
 
+
+
 #### One repeated measures variable
+
+running within
 
 
 #### Multiple repeated measures variables
+
+food
+
 ```{r, include = FALSE}
 my_missing_value_codes <- c("-999", "", "NA")
 
