--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -21,6 +21,9 @@ This chapter requires the following packages are installed:
 
 Advice is not right or the best - but it is a system. Encourage you to evolve your own system. But perhaps not in the first few months/years of using R until you see the benefits of this system - and correspondingly it's shortcomings.
 
+Warning you need mastery of the Handing data in the tidyvsere chapter before doing this chapter.
+
+
 ## Context
 
 Due to a number of high profile failure to replicate study results [@cos2015] it's become increasingly clear that there is a general crisis of confidence in many areas of science [@baker2016]. Statistical (and other) explanations have been offered [@simmons2011] for why it's hard to replicate results across different sets of data. However, scientists are also finding it challenging to recreate the numbers in their papers using their own data. Indeed, the editor of Molecular Brain asked authors to submit the data used to create the numbers in published papers and found that the wrong data was submitted for 40 out of 41 papers [@miyakawa2020].
