--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -191,22 +191,21 @@ Multi-way repeated measures predictors. If you have a column name that represent
 education, income, etc
 
 
-## Experiments: Raw to Analytic Data
 
-### Between-participant designs
+
+## Experiment: Between-participant
 
 Runnning
 
-### Within-participant designs
+## Experiment: Within-participant
 
 
-
-#### One repeated measures variable
+### One repeated measures variable
 
 running within
 
 
-#### Multiple repeated measures variables
+### Multiple repeated measures variables
 
 food
 
@@ -307,7 +306,7 @@ analytic_food_tidy %>%
 
 
 
-## Surveys: Raw to Analytic Data
+## Surveys: Single Occassion
 
 Even assuming you did everything right there is still a fair amount of work to get things started paragraph here...
 
