--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -317,9 +317,7 @@ analytic_data_between %>%
 
 You now have a between-participant analytic data set.
 
-## Experiment: Within-participant
-
-### One repeated measures variable
+## Experiment: Within one-way
 
 ```{r, results='hide'}
 # Date: YYYY-MM-DD
@@ -449,7 +447,7 @@ analytic_data_within_tidy <-analytic_data_within_tidy %>%
 glimpse(analytic_data_within)
 ```
 
-### Multiple repeated measures variables
+## Experiment: Within N-way
 
 ```{r, results='hide'}
 # Date: YYYY-MM-DD
