--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -2541,11 +2541,8 @@ You can see the new order of the factor levels with summary():
 
 You now have a between-participant analytic data set.
 
-\hypertarget{experiment-within-participant}{%
-\section{Experiment: Within-participant}\label{experiment-within-participant}}
-
-\hypertarget{one-repeated-measures-variable}{%
-\subsection{One repeated measures variable}\label{one-repeated-measures-variable}}
+\hypertarget{experiment-within-one-way}{%
+\section{Experiment: Within one-way}\label{experiment-within-one-way}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -2812,8 +2809,8 @@ You can see the new order of the factor levels with summary():
 ## $ july  <dbl> 35, 30, 33, 28, 37, 31
 \end{verbatim}
 
-\hypertarget{multiple-repeated-measures-variables}{%
-\subsection{Multiple repeated measures variables}\label{multiple-repeated-measures-variables}}
+\hypertarget{experiment-within-n-way}{%
+\section{Experiment: Within N-way}\label{experiment-within-n-way}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
